Use Xcode 16.3 in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,13 @@ jobs:
     runs-on: macos-15
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
+
+      - name: Xcode 16.3
+        run: sudo xcode-select -s /Applications/Xcode_16.3.app
+
       - name: brew install
         run: brew install xcodegen
       - name: package
