--- a/src/apps/Updater/project-base.yml
+++ b/src/apps/Updater/project-base.yml
@@ -15,7 +15,7 @@ targets:
         CODE_SIGN_STYLE: Manual
         OTHER_SWIFT_FLAGS: '-warnings-as-errors'
         DEAD_CODE_STRIPPING: 'YES'
-        #SWIFT_VERSION: '6.0'
+        SWIFT_VERSION: '6.0'
     type: application
     platform: macOS
     deploymentTarget: 13.0
