Use librkbn_get_app_icon_number in AppIconSwitcher

--- a/src/apps/AppIconSwitcher/Makefile
+++ b/src/apps/AppIconSwitcher/Makefile
@@ -1,5 +1,6 @@
 all:
 	python3 ../../../scripts/update_version.py
+	make -C ../../lib/libkrbn
 	xcodegen generate
 	xcodebuild -configuration Release -alltargets SYMROOT="$(CURDIR)/build"
 
@@ -9,3 +10,10 @@ clean:
 
 xcode:
 	open *.xcodeproj
+
+install:
+	bash ../../../scripts/codesign.sh build/Release
+
+	sudo rsync -a --delete \
+		build/Release/Karabiner-AppIconSwitcher.app \
+		'/Library/Application Support/org.pqrs/Karabiner-Elements'
