--- a/src/apps/EventViewer/Makefile
+++ b/src/apps/EventViewer/Makefile
@@ -1,5 +1,5 @@
 all:
-	python3 ../../../scripts/update_version.py
+	/usr/bin/python3 ../../../scripts/update_version.py
 	make -C ../../lib/libkrbn
 	xcodegen generate
 	xcodebuild -configuration Release -alltargets SYMROOT="$(CURDIR)/build"
