--- a/files/icons/Tamura/KarabinerElements/Makefile
+++ b/files/icons/Tamura/KarabinerElements/Makefile
@@ -1,8 +1,7 @@
 all:
 	bash ../../scripts/create-icns.sh exported/KarabinerElements.png
 	mv app.icns exported/KarabinerElements.icns
-
-copy:
+# Copy files
 	cp    exported/KarabinerElements.icns    ../../../../src/apps/share/Resources/app.icns
 	cp    exported/KarabinerElements.icns    ../../../../src/apps/share/Resources/icons/000-KarabinerElements.icns
 	cp    exported/KarabinerElements.png     ../../../../src/apps/share/Resources/icons/000-KarabinerElements.png
