--- a/files/icons/@Zabriskije/MultitouchExtension/Makefile
+++ b/files/icons/@Zabriskije/MultitouchExtension/Makefile
@@ -4,3 +4,4 @@ all:
 # Copy files
 	cp                 exported/MultitouchExtension.icns            ../../../../src/apps/share/Resources/icons/001-MultitouchExtension.icns
 	sips -z 128 128    exported/MultitouchExtension.png    --out    ../../../../src/apps/share/Resources/icons/001-MultitouchExtension.png
+	bash ../../scripts/optimize-image.sh                            ../../../../src/apps/share/Resources/icons/001-MultitouchExtension.png
