karabiner_grabber -> Karabiner-Core-Daemon

--- a/src/core/grabber/Makefile
+++ b/src/core/grabber/Makefile
@@ -11,10 +11,9 @@ install:
 	# Input Monitoring approval is required since macOS Catalina.
 	# The approval state is not taken over to new binary from old one if the certificate is changed.
 	# Thus, we sign the binary if we can do it.
-	bash ../../../scripts/codesign.sh build/Release/karabiner_grabber
+	bash ../../../scripts/codesign.sh build/Release
 
-	sudo install \
-		-m 755 \
-		build/Release/karabiner_grabber \
-		'/Library/Application Support/org.pqrs/Karabiner-Elements/bin/karabiner_grabber'
-	sudo killall karabiner_grabber
+	sudo rsync -a --delete \
+		build/Release/Karabiner-Core-Daemon.app \
+		'/Library/Application Support/org.pqrs/Karabiner-Elements'
+	sudo killall Karabiner-Core-Daemon
