org.pqrs.service.daemon.karabiner_grabber -> org.pqrs.service.daemon.Karabiner-Core-Service

--- a/src/apps/ServiceManager-Non-Privileged-Agents/LaunchAgents/org.pqrs.service.agent.Karabiner-Core-Service.plist
+++ b/src/apps/ServiceManager-Non-Privileged-Agents/LaunchAgents/org.pqrs.service.agent.Karabiner-Core-Service.plist
@@ -3,11 +3,12 @@
 <plist version="1.0">
   <dict>
     <key>Label</key>
-    <string>org.pqrs.service.daemon.karabiner_grabber3</string>
+    <string>org.pqrs.service.agent.Karabiner-Core-Service</string>
     <key>KeepAlive</key>
-    <true/>
-    <key>ProcessType</key>
-    <string>Interactive</string>
+    <dict>
+      <key>SuccessfulExit</key>
+      <false/>
+    </dict>
     <key>ProgramArguments</key>
     <array>
       <string>/Library/Application Support/org.pqrs/Karabiner-Elements/Karabiner-Core-Service.app/Contents/MacOS/Karabiner-Core-Service</string>
