--- a/src/apps/ServiceManager-Non-Privileged-Agents/Makefile
+++ b/src/apps/ServiceManager-Non-Privileged-Agents/Makefile
@@ -4,8 +4,8 @@ all:
 	xcodegen generate
 	xcodebuild -configuration Release -alltargets SYMROOT="$(CURDIR)/build"
 # Copy LaunchAgents
-	mkdir -p 'build/Release/Karabiner-Elements Non-Privileged Agents.app/Contents/Library/LaunchAgents'
-	cp LaunchAgents/*.plist 'build/Release/Karabiner-Elements Non-Privileged Agents.app/Contents/Library/LaunchAgents'
+	mkdir -p 'build/Release/Karabiner-Elements Non-Privileged Agents v2.app/Contents/Library/LaunchAgents'
+	cp LaunchAgents/*.plist 'build/Release/Karabiner-Elements Non-Privileged Agents v2.app/Contents/Library/LaunchAgents'
 
 clean:
 	rm -rf *.xcodeproj
@@ -18,5 +18,5 @@ install:
 	bash ../../../scripts/codesign.sh build/Release
 
 	sudo rsync -a --delete \
-		'build/Release/Karabiner-Elements Non-Privileged Agents' \
+		'build/Release/Karabiner-Elements Non-Privileged Agents v2' \
 		'/Library/Application Support/org.pqrs/Karabiner-Elements'
