Remove get_notification_message_file_path

--- a/src/apps/NotificationWindow/Makefile
+++ b/src/apps/NotificationWindow/Makefile
@@ -16,3 +16,4 @@ install:
 	sudo rsync -a --delete \
 		build/Release/Karabiner-NotificationWindow.app/ \
 		'/Library/Application Support/org.pqrs/Karabiner-Elements/Karabiner-NotificationWindow.app'
+	killall Karabiner-NotificationWindow
