Add timeout to duktape

--- a/tests/src/duktape_utility/CMakeLists.txt
+++ b/tests/src/duktape_utility/CMakeLists.txt
@@ -4,7 +4,7 @@ include(../../tests.cmake)
 
 project(karabiner_test)
 
-include_directories(${CMAKE_CURRENT_LIST_DIR}/../../../vendor/duktape-2.7.0/src)
+include_directories(${CMAKE_CURRENT_LIST_DIR}/../../../vendor/duktape-src)
 include_directories(${CMAKE_CURRENT_LIST_DIR}/../../../vendor/duktape-2.7.0/extras/console)
 include_directories(${CMAKE_CURRENT_LIST_DIR}/../../../vendor/duktape-2.7.0/extras/module-node)
 
@@ -15,7 +15,7 @@ add_compile_options(-Wno-unused-but-set-variable)
 add_executable(
   karabiner_test
   src/test.cpp
-  ../../../vendor/duktape-2.7.0/src/duktape.c
+  ../../../vendor/duktape-src/duktape.c
   ../../../vendor/duktape-2.7.0/extras/console/duk_console.c
   ../../../vendor/duktape-2.7.0/extras/module-node/duk_module_node.c
 )
