--- a/src/bin/cli/project.yml
+++ b/src/bin/cli/project.yml
@@ -8,7 +8,7 @@ targets:
       CODE_SIGN_STYLE: Manual
       HEADER_SEARCH_PATHS:
         - ../../share
-        - ../../../vendor/duktape-2.7.0/src
+        - ../../../vendor/duktape-src
         - ../../../vendor/duktape-2.7.0/extras/console
         - ../../../vendor/duktape-2.7.0/extras/module-node
       OTHER_SWIFT_FLAGS: '-warnings-as-errors'
@@ -27,7 +27,7 @@ targets:
           - -Wall
           - -Werror
           - '-std=c++20'
-      - path: ../../../vendor/duktape-2.7.0/src/duktape.c
+      - path: ../../../vendor/duktape-src/duktape.c
       - path: ../../../vendor/duktape-2.7.0/extras/console/duk_console.c
       - path: ../../../vendor/duktape-2.7.0/extras/module-node/duk_module_node.c
       - path: ../../../vendor/vendor/src/pqrs/osx/process_info
