--- a/tests/src/manipulator/CMakeLists.txt
+++ b/tests/src/manipulator/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.24 FATAL_ERROR)
 
 include (../../tests.cmake)
+include(../../duktape.cmake)
 
 project (karabiner_test)
 
@@ -11,6 +12,7 @@ add_executable(
 
 target_link_libraries(
   karabiner_test
+  duktape_lib
   "-framework CoreFoundation"
 )
 
@@ -21,5 +23,6 @@ add_executable(
 
 target_link_libraries(
   overwrite_expected_results
+  duktape_lib
   "-framework CoreFoundation"
 )
