--- a/tests/src/manipulator_conditions/CMakeLists.txt
+++ b/tests/src/manipulator_conditions/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.24 FATAL_ERROR)
 
 include (../../tests.cmake)
+include(../../duktape.cmake)
 
 project (karabiner_test)
 
@@ -11,5 +12,6 @@ add_executable(
 
 target_link_libraries(
   karabiner_test
+  duktape_lib
   "-framework CoreFoundation"
 )
