--- a/tests/src/event_queue/CMakeLists.txt
+++ b/tests/src/event_queue/CMakeLists.txt
@@ -12,7 +12,7 @@ add_executable(
 
 target_link_libraries(
   karabiner_test
-  duktape_lib
+  libduktape
   "-framework CoreFoundation"
   "-framework IOKit"
 )
