--- a/tests/src/configuration_monitor/CMakeLists.txt
+++ b/tests/src/configuration_monitor/CMakeLists.txt
@@ -12,7 +12,7 @@ add_executable(
 
 target_link_libraries(
   karabiner_test
-  duktape_lib
+  libduktape
   "-framework CoreServices"
   "-framework SystemConfiguration"
 )
