--- a/src/apps/SettingsWindow/project.yml
+++ b/src/apps/SettingsWindow/project.yml
@@ -18,8 +18,8 @@ targets:
       HEADER_SEARCH_PATHS:
         - ../../lib/libkrbn/include
       OTHER_LDFLAGS:
-        - -L../../lib/libkrbn/build/Release
-        - -lkrbn
+        - ../../lib/libkrbn/build/Release/libkrbn.a
+        - ../../../vendor/duktape-src/build/Release/libduktape.a
       OTHER_SWIFT_FLAGS: '-warnings-as-errors'
       SWIFT_OBJC_BRIDGING_HEADER:
         - src/Bridging-Header.h
