--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,6 +5,12 @@
 
     "overrides": [
         {
+            "files": "*.jsonc",
+            "options": {
+                "trailingComma": "none"
+            }
+        },
+        {
             "files": "*.yml",
             "options": {
                 "tabWidth": 2
