[WIP] eventtap support

--- a/src/core/CoreService/Makefile
+++ b/src/core/CoreService/Makefile
@@ -8,12 +8,13 @@ clean:
 	rm -fr *.xcodeproj
 	rm -fr build
 
-install:
+codesign: all
 	# Input Monitoring approval is required since macOS Catalina.
 	# The approval state is not taken over to new binary from old one if the certificate is changed.
 	# Thus, we sign the binary if we can do it.
 	bash ../../../scripts/codesign.sh build/Release
 
+install: codesign
 	sudo rsync -a --delete \
 		build/Release/Karabiner-Core-Service.app \
 		'/Library/Application Support/org.pqrs/Karabiner-Elements'
