--- a/src/core/CoreService/project.yml
+++ b/src/core/CoreService/project.yml
@@ -39,3 +39,5 @@ targets:
           - '*.orig.png'
           - '*.plist.in'
       - path: ../../apps/share/Resources/app.icns
+    dependencies:
+      - sdk: Carbon.framework
