--- a/tests/src/fn_function_keys_manipulator_manager/CMakeLists.txt
+++ b/tests/src/fn_function_keys_manipulator_manager/CMakeLists.txt
@@ -12,4 +12,6 @@ add_executable(
 target_link_libraries(
   karabiner_test
   libduktape
+  "-framework CoreFoundation"
+  "-framework CoreGraphics"
 )
